gluon native build WIP